--- a/20251117_week11-14_graph.md
+++ b/20251117_week11-14_graph.md
@@ -1,6 +1,6 @@
 # Week11~14 图论：连接万物的图
 
-Updated 1947 GMT+8 Nov 16, 2025
+Updated 2247 GMT+8 Nov 16, 2025
 
 2025 winter, Complied by Hongfei Yan
 
@@ -436,7 +436,9 @@ for i in range(n):
 
 
 
-<mark>dict套list, dict套queue，dict套dict，真好用！</mark>
+### 引言：dict套list, dict套queue，dict套dict
+
+真好用！
 
 > 确实，Python 中的字典（`dict`）是非常灵活和强大的数据结构，可以用于构建各种复杂的数据结构。
 >
@@ -473,10 +475,13 @@ for i in range(n):
 > }
 > ```
 >
-> ## 27928: 遍历树
->
-> http://cs101.openjudge.cn/practice/27928/
->
+
+
+
+### 示例27928: 遍历树
+
+http://cs101.openjudge.cn/practice/27928/
+
 > 请你对输入的树做遍历。遍历的规则是：遍历到每个节点时，按照该节点和所有子节点的值从小到大进行遍历，例如：
 >
 > ```
@@ -537,45 +542,46 @@ for i in range(n):
 > 9
 > ```
 >
-> 来源
->
-> 2024spring zht
+> 来源：2024spring zht
 >
 > 
+>
+> 思路：
+>
+> - 读入节点个数 n，然后依次读入 n 行，每一行的第一个数为该节点的值，后续数为它的所有直接孩子的值。
+> - <mark>使用字典存储各节点与它们子节点的关系</mark>。同时记录所有出现在“孩子”位置的节点，这样可以通过集合差运算找到根节点（根节点不会作为孩子出现）。
+> - 如果某个元素等于当前节点，则直接输出该节点的值；如果某个元素是子节点，则递归地遍历该子节点。
+>
+> 
+>
+> <mark>递归天然是深度优先</mark>
 >
 > ```python
-> # 李思哲 物理学院
-> class TreeNode:
->     def __init__(self, value):
->         self.value = value
->         self.children = []
-> 
-> 
-> def traverse_print(root, nodes):
->     if root.children == []:
->         print(root.value)
->         return
->     pac = {root.value: root}
->     for child in root.children:
->         pac[child] = nodes[child]
->     for value in sorted(pac.keys()):
->         if value in root.children:
->             traverse_print(pac[value], nodes)
+> def traverse(x, tree):
+>     # 当前节点及其所有子节点值
+>     group = [x] + tree[x]
+>     # 从小到大排序
+>     for val in sorted(group):
+>         if val == x:
+>             print(x)
 >         else:
->             print(root.value)
+>             traverse(val, tree)
 > 
 > 
 > n = int(input())
-> nodes = {}
-> children_list = []
-> for i in range(n):
->     info = list(map(int, input().split()))
->     nodes[info[0]] = TreeNode(info[0])
->     for child_value in info[1:]:
->         nodes[info[0]].children.append(child_value)
->         children_list.append(child_value)
-> root = nodes[[value for value in nodes.keys() if value not in children_list][0]]
-> traverse_print(root, nodes)
+> tree = {}
+> all_children = set()
+> 
+> for _ in range(n):
+>     line = list(map(int, input().split()))
+>     val = line[0]
+>     tree[val] = line[1:]
+>     all_children.update(line[1:])
+> 
+> # 根节点 = 未作为子节点出现的节点
+> root = (set(tree.keys()) - all_children).pop()
+> 
+> traverse(root, tree)
 > 
 > ```
 >
@@ -611,8 +617,18 @@ for i in range(n):
 >
 > 这样的表示方式使得我们可以非常高效地搜索和插入字符串，特别是在大型数据集上。
 >
-> 例如，04089:电话号码，http://cs101.openjudge.cn/practice/04089/
+> https://www.geeksforgeeks.org/trie-insert-and-search/
 >
+> **Definition:** A trie (prefix tree, derived from retrieval) is a multiway tree data structure used for storing strings over an alphabet. It is used to store a large amount of strings. The pattern matching can be done efficiently using tries.
+>
+> 使用字典实现的字典树（Trie）。它的主要功能是插入和搜索字符串。
+>
+> 
+
+### 示例04089:电话号码
+
+http://cs101.openjudge.cn/practice/04089/
+
 > 给你一些电话号码，请判断它们是否是一致的，即是否有某个电话是另一个电话的前缀。比如：
 >
 > Emergency 911
@@ -655,174 +671,89 @@ for i in range(n):
 >
 > 
 >
-> https://www.geeksforgeeks.org/trie-insert-and-search/
+> 
 >
-> **Definition:** A trie (prefix tree, derived from retrieval) is a multiway tree data structure used for storing strings over an alphabet. It is used to store a large amount of strings. The pattern matching can be done efficiently using tries.
->
-> 使用字典实现的字典树（Trie）。它的主要功能是插入和搜索字符串。
+> **最优解（不需要Trie）**：排序+相邻比较。<mark>排序后所有前缀关系只可能出现在相邻元素之间</mark>。
 >
 > ```python
-> class TrieNode:
->     def __init__(self):
->         self.child={}
-> 
-> 
-> class Trie:
->     def __init__(self):
->         self.root = TrieNode()
-> 
->     def insert(self, nums):
->         curnode = self.root
->         for x in nums:
->             if x not in curnode.child:
->                 curnode.child[x] = TrieNode()
->             curnode=curnode.child[x]
-> 
->     def search(self, num):
->         curnode = self.root
->         for x in num:
->             if x not in curnode.child:
->                 return 0
->             curnode = curnode.child[x]
->         return 1
-> 
-> 
 > t = int(input())
-> p = []
 > for _ in range(t):
 >     n = int(input())
->     nums = []
->     for _ in range(n):
->         nums.append(str(input()))
->     nums.sort(reverse=True)
->     s = 0
->     trie = Trie()
->     for num in nums:
->         s += trie.search(num)
->         trie.insert(num)
->     if s > 0:
->         print('NO')
->     else:
->         print('YES')
+>     nums = [input().strip() for _ in range(n)]
+>     nums.sort()                           # 字典序排序
+> 
+>     ok = True
+>     for i in range(n-1):
+>         # 如果前一个是后一个的前缀 → 冲突
+>         if nums[i+1].startswith(nums[i]):
+>             ok = False
+>             break
+> 
+>     print("YES" if ok else "NO")
+> 
 > ```
 >
 > 
 >
 > 
 >
-> 要解决这个问题，需要判断是否存在某个电话号码是另一个电话号码的前缀。这可以通过构建一个 **字典树（Trie）** 来高效实现。
+> **Trie思路**，逻辑：
 >
-> **解题思路**
+> - 插入号码时，如果你的路径上遇到“终止标记”，则表示已有短号码是你的前缀 → 冲突
+> - 插入完毕后，如果你自己是前缀（有子节点）→ 冲突
 >
-> 1. **字典树（Trie）**：
->    - 字典树是一种专门用来处理字符串前缀问题的数据结构。
->    - 每个节点存储一个字符，路径表示字符串的前缀。
->    - 如果某个节点已经是某个电话号码的结尾（即完整电话号码），那么后续插入的任何电话号码都会以它为前缀。
->
-> 2. **算法步骤**：
->    - 对于每个测试样例：
->      1. 构建一个空的字典树。
->      2. 将所有电话号码按长度从短到长排序（因为短的号码更可能是长号码的前缀）。
->      3. 遍历每个电话号码：
->         - 在字典树中查找该号码是否已经存在完整的前缀。
->         - 如果存在，则直接输出 "NO"。
->         - 否则，将该号码插入字典树。
->      4. 如果所有号码都成功插入且没有冲突，输出 "YES"。
->
-> 3. **复杂度分析**：
->    - 插入和查找操作在字典树中的时间复杂度为 $O(L)$，其中 L 是电话号码的长度。
->    - 因此，总的时间复杂度为 $O(t \cdot n \cdot L)$，其中 t 是测试样例数，n 是电话号码的数量，L 是电话号码的最大长度。
->
-> ---
->
-> 实现代码
+> ⚠️：如果有重复号码存在，→ 冲突
 >
 > ```python
-> class TrieNode:
+> class Node:
 >     def __init__(self):
->         self.children = {}
->         self.is_end_of_number = False
+>         self.child = {}
+>         self.end = False
 > 
-> class Trie:
->     def __init__(self):
->         self.root = TrieNode()
->     
->     def insert(self, number):
->         node = self.root
->         for digit in number:
->             if digit not in node.children:
->                 node.children[digit] = TrieNode()
->             node = node.children[digit]
->             # 如果当前节点已经是某个电话号码的结尾，则说明存在前缀冲突
->             if node.is_end_of_number:
->                 return False
->         # 插入完成后，标记为完整电话号码
->         node.is_end_of_number = True
->         # 如果当前节点还有子节点，说明有其他号码以它为前缀
->         return len(node.children) == 0
->     
->     def is_consistent(self, numbers):
->         # 按长度从短到长排序，确保短号码先被检查
->         numbers.sort(key=len)
->         for number in numbers:
->             if not self.insert(number):
->                 return False
->         return True
+> def insert(root, s):
+>     cur = root
+>     for c in s:
+>         # 如果在路径上遇到已结束的号码，说明已有短号码是当前号码的前缀 -> 冲突
+>         if cur.end:
+>             return False
+>         if c not in cur.child:
+>             cur.child[c] = Node()
+>         cur = cur.child[c]
+>     # 到达末尾：若这个节点已有结束标记，说明完全相同的号码已存在 -> 冲突
+>     if cur.end:
+>         return False
+>     # 若这个节点有子节点，说明当前号码是已有更长号码的前缀 -> 冲突
+>     if cur.child:
+>         return False
+>     cur.end = True
+>     return True
 > 
-> def main():
->     import sys
->     input = sys.stdin.read
->     data = input().splitlines()
->     
->     t = int(data[0])  # 测试样例数量
->     index = 1
->     results = []
->     
->     for _ in range(t):
->         n = int(data[index])  # 当前测试样例的电话号码数量
->         index += 1
->         numbers = data[index:index + n]
->         index += n
->         
->         trie = Trie()
->         if trie.is_consistent(numbers):
->             results.append("YES")
->         else:
->             results.append("NO")
->     
->     print("\n".join(results))
+> import sys
+> input = sys.stdin.readline
 > 
-> # 调用主函数
-> if __name__ == "__main__":
->     main()
+> t = int(input().strip())
+> for _ in range(t):
+>     n = int(input().strip())
+>     nums = [input().strip() for _ in range(n)]
+>     nums.sort()  # 升序排序（短的前面）
+> 
+>     root = Node()
+>     ok = True
+>     for num in nums:
+>         if not insert(root, num):
+>             ok = False
+>             break
+>     print("YES" if ok else "NO")
+> 
 > ```
 >
-> 代码解释
->
-> 1. **TrieNode 类**：
->    - `children`：存储子节点，键是数字字符，值是子节点对象。
->    - `is_end_of_number`：标记当前节点是否是一个完整电话号码的结尾。
->
-> 2. **Trie 类**：
->    - `insert` 方法：在字典树中插入一个电话号码，同时检查是否存在前缀冲突。
->    - `is_consistent` 方法：遍历所有电话号码，依次插入字典树，返回是否一致。
->
-> 3. **主函数**：
->    - 读取输入数据，解析测试样例。
->    - 对每个测试样例调用 `Trie` 的 `is_consistent` 方法，输出结果。
->
-> ---
->
-> 注意事项
->
-> - 输入电话号码可能包含前导零，因此不能将其转换为整数。
-> - 排序电话号码时按照长度从小到大排序，可以减少不必要的冲突检查。
-> - 使用字典树能够高效地解决前缀问题，避免暴力比较的高时间复杂度。
->
 > 
 >
-> **神奇的dict**
->
+
+
+
+**神奇的dict**
+
 > 字典（dict）是Python中非常强大和灵活的数据结构之一，它可以用来存储键值对，是一种可变容器模型，可以存储任意数量的 Python 对象。
 >
 > 字典在 Python 中被广泛用于各种场景，例如：
@@ -861,7 +792,7 @@ for i in range(n):
 
 
 
-邻接矩阵的优点是简单。对于小图来说，邻接矩阵可以清晰地展示哪些顶点是相连的。但是，图5中的绝大多数单元格是空的，我们称这种矩阵是“稀疏”的。对于存储稀疏数据来说，矩阵并不高效。
+邻接矩阵的优点是简单。对于小图来说，邻接矩阵可以清晰地展示哪些顶点是相连的。但是，图5中的绝大多数单元格是空的，我们称这种<mark>矩阵是“稀疏”</mark>的。对于存储稀疏数据来说，矩阵并不高效。
 
 邻接矩阵适用于表示有很多条边的图。但是，“很多条边”具体是什么意思呢？要填满矩阵，共需要多少条边？由于每一行和每一列对应图中的每一个顶点，因此填满矩阵共需要|V|^2^条边。当每一个顶点都与其他所有顶点相连时，矩阵就被填满了。在现实世界中，很少有问题能够达到这种连接度。
 
@@ -883,7 +814,7 @@ for i in range(n):
 
 ### *关联矩阵
 
-关联矩阵是一种图的表示方法，通常用于表示有向图。在关联矩阵中，行代表顶点，列代表边，如果顶点与边相连，则在对应的位置填上1，否则填上0。
+关联矩阵是一种图的表示方法，通常用于表示有向图。<mark>在关联矩阵中，行代表顶点，列代表边</mark>，如果顶点与边相连，则在对应的位置填上1，否则填上0。
 
 虽然关联矩阵和邻接表都可以用来表示图，但它们在内存消耗和操作效率上有所不同。关联矩阵的存储空间复杂度为O(V*E)，其中V是顶点数，E是边数。但是，邻接表的存储空间复杂度为O(V+E)，它通常比关联矩阵更节省空间。
 
@@ -1281,7 +1212,7 @@ for i in range(n):
 ### 2.4 图的实现（笔试）
 
 在Python中，通过字典可以轻松地实现邻接表。要创建两个类：Graph类存储包含所有顶点的主列表，Vertex类表示图中的每一个顶点。
-Vertex使用字典neighbors来记录与其相连的顶点，以及每一条边的权重。其构造方法简单地初始化key（它通常是一个字符串），以及字典neighbors。set_edge方法添加从一个顶点到另一个的连接。get_neighbors方法返回邻接表中的所有顶点。get_neighbor方法返回从当前顶点到以参数传入的顶点之间的边的权重。
+Vertex使用字典neighbors来记录与其相连的顶点，以及每一条边的权重。其构造方法简单地初始化key（它通常是一个字符串），以及字典neighbors。set_neighbor方法添加从一个顶点到另一个的连接。get_neighbors方法返回邻接表中的所有顶点。get_neighbor方法返回从当前顶点到以参数传入的顶点之间的边的权重。
 
 代码Vertex类
 
@@ -1403,7 +1334,7 @@ if __name__ == "__main__":
 
 OOP, implementation, http://cs101.openjudge.cn/practice/19943/
 
-在图论中，度数矩阵是一个对角矩阵 ，其中包含的信息为的每一个顶点的度数，也就是说，每个顶点相邻的边数。<mark>邻接矩阵是图的一种常用存储方式</mark>。如果一个图一共有编号为0,1,2，…n-1的n个节点，那么邻接矩阵A的大小为n*n，对其中任一元素Aij，如果节点i，j直接有边，那么Aij=1；否则Aij=0。
+在图论中，度数矩阵是一个对角矩阵 ，其中包含的信息为每一个顶点的度数，也就是说，每个顶点相邻的边数。<mark>邻接矩阵是图的一种常用存储方式</mark>。如果一个图一共有编号为0,1,2，…n-1的n个节点，那么邻接矩阵A的大小为n*n，对其中任一元素Aij，如果节点i，j直接有边，那么Aij=1；否则Aij=0。
 
 将度数矩阵与邻接矩阵逐位相减，可以求得图的拉普拉斯矩阵。具体可见下图示意。
 
@@ -1535,6 +1466,51 @@ laplacianMatrix = constructLaplacianMatrix(n, edges)	# 构建拉普拉斯矩阵
 for row in laplacianMatrix:	# 输出结果
     print(' '.join(map(str, row)))
 ```
+
+> **为什么邻接矩阵 A 和度数矩阵 D 都不需要显式构建？**
+>
+> 因为：
+>
+> - `len(vertex.neighbors)` → 度数
+> - `neighbor in vertex.neighbors` → 是否有边
+>
+> 所以利用邻接表，也能直接构建出 L = D − A，不必真的建立 A 和 D。
+>
+> 这就是 OOP 图结构的优势：隐藏复杂性、数据和操作封装在一起。
+>
+> 
+>
+> **示例：构造第 1 行（点 0）的拉普拉斯矩阵行**
+>
+> 点 0 的邻居是：1、2
+> 所以：
+>
+> ```
+> row = [0, 0, 0, 0]
+> ```
+>
+> 设置对角线：
+>
+> ```
+> row[0] = 2
+> ```
+>
+> 设置邻居：
+>
+> ```
+> row[1] = -1
+> row[2] = -1
+> ```
+>
+> 得到：
+>
+> ```
+> [2, -1, -1, 0]
+> ```
+>
+> 与样例完全一致。
+
+
 
 
 
