--- a/20251117_week11-14_graph.md
+++ b/20251117_week11-14_graph.md
@@ -6850,6 +6850,11 @@ D -> E Weight:6
 
 一般来说，AOE网络用来表示一个工程的进行过程，而工程可以分为若干个子工程（即“活动”），显然AOE网不能有环，否则会让优先关系出现逻辑错误。因此可以认为AOE网是有向无环图（DAG）。既然AOE网是基于工程提出的概念，那么一定有其需要解决的问题。AOE网需要着重解决两个问题：a.工程起始到终止至少需要多少时间；b.哪条（些）路径上的活动是影响整个工程进度的关键。<mark>AOE网络中的最长路径被称为**关键路径**</mark>（强调：**关键路径就是AOE网的最长路径**），而把关键路径上的活动称为**关键活动**，显然关键活动会影响整个工程的进度。
 
+> **关键路径 AOE：** 是 **边带权**。
+>
+> - 任务在**边**上，节点代表“事件”（时刻）。
+> - **关键路径算法（CPM）的标准定义**不仅要求总工期，还要求找出**所有**没有机动时间（Slack = 0）的活动。
+
 以下是基于 AOE 网络的关键路径算法的基本步骤：
 
 #### 1. 构建图模型
@@ -6880,8 +6885,8 @@ from collections import defaultdict, deque
 
 class Edge:
     def __init__(self, v, w):
-        self.v = v
-        self.w = w
+        self.v = v	# 边的终点
+        self.w = w  # 边的权重（活动耗时）
 
 def topo_sort(n, G, in_degree):
     q = deque([i for i in range(n) if in_degree[i] == 0])
@@ -6899,26 +6904,31 @@ def topo_sort(n, G, in_degree):
             if ve[u] + edge.w > ve[v]:
                 ve[v] = ve[u] + edge.w
 
+    # 判环：如果拓扑序列长度不等于 N，说明有环
     if len(topo_order) == n:
         return ve, topo_order
     else:
         return None, None
 
 def get_critical_path(n, G, in_degree):
+  	#	步骤 1: 拓扑排序 求 ve (最早开始时间)
     ve, topo_order = topo_sort(n, G, in_degree.copy())
     if ve is None:
         return -1, []
 
-    maxLength = max(ve)
+    maxLength = max(ve)	# 项目总工期
     vl = [maxLength] * n
 
+    # 步骤 2: 反向推导 求 vl (最晚开始时间)
     for u in reversed(topo_order):
         for edge in G[u]:
             v = edge.v
+            # vl[u] = min(vl[v] - w)
             if vl[v] - edge.w < vl[u]:
                 vl[u] = vl[v] - edge.w
 
-    activity = defaultdict(list)
+    # 步骤 3: 寻找关键活动并构建关键图
+    activity = defaultdict(list)	# 关键路径组成的图
     for u in G:
         for edge in G[u]:
             v = edge.v
@@ -6930,6 +6940,7 @@ def get_critical_path(n, G, in_degree):
 
 # Main
 n, m = map(int, input().split())
+# 建图
 G = defaultdict(list)
 in_degree = [0] * n
 for _ in range(m):
@@ -6966,7 +6977,7 @@ else:
 示例
 
 ```
- 8
+ 6 8
  0 1 3
  0 2 2
  1 3 2
@@ -7071,49 +7082,64 @@ No
 
 
 
-这个问题可以通过使用拓扑排序来解决。拓扑排序是对有向无环图的顶点的一种排序，它使得如果存在一条从顶点 u 到顶点 v 的路径，那么在排序中 u 一定在 v 的前面。如果在进行拓扑排序的过程中，发现存在没有被访问的顶点，但是已经没有入度为0的顶点，那么就说明图中存在环，也就是存在不能学习的课程。
+这是一个 **拓扑排序** 问题，但有一个特殊要求：**在可选课程中总是优先选择编号最小的课程**。这提示我们使用 **基于优先队列（最小堆）的 Kahn 算法** 来实现拓扑排序。
 
-以下是使用拓扑排序判断有向图是否存在环并输出学习课程顺序的Python代码：
+此外，题目还要求：
+
+- 如果能完成所有课程，输出 `Yes` 和学习顺序；
+- 如果不能，输出 `No` 和 **无法学习的课程数量**（即不在拓扑序列中的课程数）。
 
 ```python
-from collections import defaultdict
+import heapq
+import sys
 
-def courseSchedule(n, edges):
-    graph = defaultdict(list)
-    indegree = [0] * n
-    for u, v in edges:
+def main():
+    data = sys.stdin.read().split()
+    if not data:
+        return
+    
+    n = int(data[0])
+    m = int(data[1])
+    
+    graph = [[] for _ in range(n)]
+    indeg = [0] * n
+    
+    idx = 2
+    for _ in range(m):
+        u = int(data[idx])
+        v = int(data[idx + 1])
+        idx += 2
         graph[u].append(v)
-        indegree[v] += 1
-
-    queue = [i for i in range(n) if indegree[i] == 0]
-    queue.sort()
-    result = []
-
-    while queue:
-        u = queue.pop(0)
-        result.append(u)
+        indeg[v] += 1
+    
+    # 最小堆：存储当前可学的课程（入度为0）
+    heap = []
+    for i in range(n):
+        if indeg[i] == 0:
+            heapq.heappush(heap, i)
+    
+    topo_order = []
+    
+    while heap:
+        u = heapq.heappop(heap)
+        topo_order.append(u)
         for v in graph[u]:
-            indegree[v] -= 1
-            if indegree[v] == 0:
-                queue.append(v)
-        queue.sort()
-
-    if len(result) == n:
-        return "Yes", result
+            indeg[v] -= 1
+            if indeg[v] == 0:
+                heapq.heappush(heap, v)
+    
+    if len(topo_order) == n:
+        print("Yes")
+        print(" ".join(map(str, topo_order)))
     else:
-        return "No", n - len(result)
+        print("No")
+        print(n - len(topo_order))
 
-n, m = map(int, input().split())
-edges = [list(map(int, input().split())) for _ in range(m)]
-res, courses = courseSchedule(n, edges)
-print(res)
-if res == "Yes":
-    print(*courses)
-else:
-    print(courses)
+if __name__ == "__main__":
+    main()
 ```
 
-在这段代码中，我们首先构建了一个图，并计算了每个顶点的入度。然后我们将所有入度为0的顶点添加到队列中，并对队列进行排序。然后在循环中，我们每次从队列中取出一个顶点，将其添加到结果中，然后遍历其所有的邻接顶点，将邻接顶点的入度减1，如果邻接顶点的入度变为0，那么就将其添加到队列中。最后，我们检查访问的顶点数是否等于总的顶点数，如果等于，那么说明可以学完所有课程，否则说明存在不能学习的课程。
+
 
 
 
